# programming_exam_preparation

./: CMakeLists.txt  algorithm_standard_library.cpp
lections/2_lection/: function_overloading.cpp
lections/3_lection/: strings.cpp
lections/4_lection/: variable_shadowing.cpp
lections/5_lection/: abstract_data_structers.cpp
lections/6_lection/: containers_and_iterators.cpp
questions/: 1 - 63  1-63.txt  10_stack.cpp  11_deque.cpp  12_array.cpp  6_ariphmetic_pointers.cpp  cin_cout.cpp  enum.cpp  file_output.cpp  funktor.cpp  l_value_r_value.cpp  limits.cpp
syntax_explanations/: hashing.cpp
