cmake_minimum_required(VERSION 3.26)
project(programming_exam_preparation)

set(CMAKE_CXX_STANDARD 17)

add_executable(2_lection "lections/2_lection/function_overloading.cpp"
)
add_executable(3_lection "lections/3_lection/strings.cpp")
add_executable(4_lection "lections/4_lection/variable_shadowing.cpp")
add_executable(5_lection "lections/5_lection/abstract_data_structers.cpp")
add_executable(6_lection "lections/6_lection/containers_and_iterators.cpp")
