cmake_minimum_required(VERSION 3.26)
project(programming_exam_preparation)

set(CMAKE_CXX_STANDARD 17)

add_executable(2_lection "lections/2_lection/function_overloading.cpp"
)
add_executable(3_lection "lections/3_lection/strings.cpp")
add_executable(4_lection "lections/4_lection/variable_shadowing.cpp")
add_executable(5_lection "lections/5_lection/abstract_data_structers.cpp")
add_executable(6_lection "lections/6_lection/containers_and_iterators.cpp")
add_executable(hashing "syntax_explanations/hashing.cpp")
add_executable(algorithm_standard_library "algorithm_standard_library.cpp")
add_executable(6_ariphmetic_pointers "questions/6_ariphmetic_pointers.cpp")
add_executable(10_stack "questions/10_stack.cpp")
add_executable(11_deque "questions/11_deque.cpp")
add_executable(12_array "questions/12_array.cpp")
add_executable(cin_cout "questions/cin_cout.cpp")
add_executable(l_value_r_value "questions/l_value_r_value.cpp")
add_executable(file_output questions/file_output.cpp)
add_executable(limits questions/limits.cpp)
add_executable(funktor "questions/funktor.cpp")
add_executable(enum questions/enum.cpp)
